avoid deprecated Class.newInstance (#192)